deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-go
spec:
  type: ClusterIP
  selector:
    app: code-server-go
  ports:
  - port: 8080
